--- a/styles.css
+++ b/styles.css
@@ -4,8 +4,8 @@
     background-color: #CFCFCF;
     border: 2px solid blue;
     border-radius: 15px;
-    min-height: 600px;
-    max-height: 1000px;
+    //min-height: 600px;
+    height: 100%;
 }
 .size{
     width: 400px;
