--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,7 @@
     background-color: #CFCFCF;
     border: 2px solid blue;
     border-radius: 15px;
-    //min-height: 600px;
+    min-height: 200px;
     height: 100%;
 }
 .size{
