--- a/styles.css
+++ b/styles.css
@@ -77,5 +77,8 @@ display: block;
 background-color: #485bff;
 }
 
-.fRight{display: table;padding-top: 5px;}
+.fRight{
+display: table;
+padding-top: 5px;
+float: right;}
 
