--- a/styles.css
+++ b/styles.css
@@ -15,6 +15,7 @@
     padding-right: 20px;
     float: left;
     display: block;
+    min-height: 200px;
     height: 90%;
 }
 
@@ -79,6 +80,7 @@ background-color: #485bff;
 }
 
 .fRight {
+min-height: 200px;
 height: 90%;
 }
 
