--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,7 @@
     border-radius: 15px;
     min-height: 200px;
     height: 100%;
-    display: inline-block;
+    display: table;
 }
 .size{
     width: 400px;
