--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,7 @@
     border-radius: 15px;
     min-height: 200px;
     height: 100%;
-    display: table;
+    display: inline-block;
     position: absolute;
 }
 .size{
