--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,7 @@
     height: 100%;
     display: inline-block;
     position: absolute;
-    width: 400px;
+    max-width: 400px;
 }
 .size{
     width: 400px;
