--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,8 @@
     border-radius: 15px;
     min-height: 200px;
     height: 100%;
+    display: inline-block;
+    position: absolute;
 }
 .size{
     width: 400px;
@@ -22,6 +24,7 @@ div.scrollgal {
 background-color: #333;
 overflow: auto;
 white-space: nowrap;
+width: 400px;
 
 }
 
