--- a/styles.css
+++ b/styles.css
@@ -1,24 +1,24 @@
 .Container{
-      width: 1200px;
-      padding: 10px;
-      background-color: #CFCFCF;
-      border: 2px solid blue;
-      border-radius: 15px;
-      min-height: 600px;
-      max-height: 1000px;
-  }
-  .size{
-      width: 200px;
-  
-  }
-  .fLeft{
-      padding-right: 20px;
-      float: left;
-  }
+    padding: 10px;
+    background-color: #CFCFCF;
+    border: 2px solid blue;
+    border-radius: 15px;
+    min-height: 200px;
+    height: 100%;
+    overflow-wrap: break-word;
+}
+.size{
+    width: 800px;
+
+}
+.fLeft{
+    padding-right: 20px;
+    float: left;
+}
 
 
 
-  div.scrollgal {
+div.scrollgal {
 background-color: #333;
 overflow: auto;
 white-space: nowrap;
@@ -76,13 +76,11 @@ display: block;
 background-color: #485bff;
 }
 
-.fRight{
+.fRight {
+float: right;
 
 }
 
-.fRightTxt{
-  overflow-wrap: break-word;
-  display: block;
-  padding-top: 5px;
-  display: inline;
+.fRight_txt{
+padding-top: 5px;
 }
