--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,7 @@
     border-radius: 15px;
     min-height: 200px;
     height: 100%;
+    display: inline-block;
     overflow-wrap: break-word;
 }
 .size{
